Remove all refs to touchEventFeatureDetection in ScrollingCoordinator.

ScrollingCoordinator::updateTouchEventTargetRectsIfNeeded() currently doesn't
update the touch rects when TouchEvent feature detection is disabled. This
could be bad when scrolling with a touch-action:none region. Since we are
always firing touch events, we can remove all refs to
touchEventFeatureDetection in ScrollingCoordinator.

BUG=671232

Review-Url: https://codereview.chromium.org/2582473003
Cr-Commit-Position: refs/heads/master@{#438875}

Former-commit-id: 4436064358a762936f8da853fc1271e036b96491