third_party/WebKit/Source/core/page/scrolling/ScrollingCoordinator.cpp
@@ -658,12 +658,6 @@ void ScrollingCoordinator::updateTouchEventTargetRectsIfNeeded() {
   TRACE_EVENT0("input",
                "ScrollingCoordinator::updateTouchEventTargetRectsIfNeeded");
 
-  // TODO(sunyunjia): remove all refs to touchEvenFeatureDetectionEnabled
-  // in this class since we are always firing touch events.
-  // crbug.com/671232
-  if (!RuntimeEnabledFeatures::touchEventFeatureDetectionEnabled())
-    return;
-
   // TODO(chrishtr): implement touch event target rects for SPv2.
   if (RuntimeEnabledFeatures::slimmingPaintV2Enabled())
     return;
@@ -732,9 +726,6 @@ void ScrollingCoordinator::setTouchEventTargetRects(
 }
 
 void ScrollingCoordinator::touchEventTargetRectsDidChange() {
-  if (!RuntimeEnabledFeatures::touchEventFeatureDetectionEnabled())
-    return;
-
   DCHECK(m_page);
   if (!m_page->mainFrame()->isLocalFrame() ||
       !m_page->deprecatedLocalMainFrame()->view())
@@ -1040,7 +1031,6 @@ static void accumulateDocumentTouchEventTargetRects(LayerHitTestRects& rects,
 void ScrollingCoordinator::computeTouchEventTargetRects(
     LayerHitTestRects& rects) {
   TRACE_EVENT0("input", "ScrollingCoordinator::computeTouchEventTargetRects");
-  DCHECK(RuntimeEnabledFeatures::touchEventFeatureDetectionEnabled());
 
   Document* document = m_page->deprecatedLocalMainFrame()->document();
   if (!document || !document->view())
